applications/charts/home/home-assistant/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-home-assistant
  annotations:
      kubernetes.io/tls-acme: 'true' 
      ingress.kubernetes.io/ssl-redirect: "true"
      kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
    - secretName: secret-tls
      hosts:
      - home-assistant.crazyzone.be
  rules:
    - host: home-assistant.crazyzone.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: RELEASE-NAME-home-assistant
                port:
                  number: 8123
